@@ -2,7 +2,7 @@
 <!-- ====================================================================== 
      April 20, 2009 2:43:07 PM                                                        
 
-     RED_Core    
+     PHP Tests    
      Tests the PHP feature
                    
      cwilliams                                                                
@@ -13,6 +13,11 @@
     </description>
 
 	<property file="build_local.properties" />
+	<taskdef resource="net/sf/antcontrib/antlib.xml">
+		<classpath>
+			<pathelement location="${basedir}/ant-contrib/ant-contrib.jar" />
+		</classpath>
+	</taskdef>
 
 	<!-- Set up EMMA location and instrumentation path -->
 	<path id="emma.lib">
@@ -46,6 +51,7 @@
           target: generate.build.properties              
          ================================= -->
 	<target name="generate.build.properties" description="Takes in properties from build_local.properties and the command line overrides and generates a combined build.properties to use for the build">
+		<exec executable="hostname" outputproperty="computer.hostname" />
 		<echoproperties destfile="build.properties">
 			<propertyset negate="true">
 				<propertyref prefix="java." />
@@ -58,89 +64,42 @@
 	</target>
 
 	<!-- ================================= 
-	      target: clean              
+	      target: clean
 	     ================================= -->
 	<target name="clean" depends="generate.build.properties" description="Clean up temp and build files">
-		<delete failonerror="false">
-			<fileset dir="${buildDirectory}" defaultexcludes="true">
-				<include name="assemble.*" />
-				<include name="finalFeaturesVersions.*" />
-				<include name="finalPluginsVersions.*" />
-				<include name="package.*" />
-			</fileset>
-		</delete>
-		<delete dir="${coverageDirectory}" failonerror="false" />
-		<delete dir="${testResultsDirectory}" failonerror="false" />
-		<delete dir="${buildDirectory}/${buildLabel}" failonerror="false" />
-		<java jar="${baseLocation}/plugins/${launcher.plugin}.jar" fork="true" failonerror="false">
-			<arg line="-application org.eclipse.ant.core.antRunner -buildfile ${baseLocation}/plugins/${builder.plugin}/scripts/productBuild/productBuild.xml -Dbuilder=${basedir} -nosplash clean" />
-		</java>
-		<delete dir="${baseLocation}" />
-		<delete dir="${buildDirectory}/features/org.eclipse.pde.build.container.feature" failonerror="false" />
-		<delete dir="${p2.repo.dir}" failonerror="false" />
-		<!-- Do a git clean of the build directory -->
-		<exec executable="/bin/bash" dir="${buildDirectory}">
-			<arg value="-c" />
-			<arg value="${git.executable} clean -f -d -x" />
-		</exec>
-		<delete file="build.properties" failonerror="false" />
-		<delete dir="${buildDirectory}/eclipse" failonerror="false" />
-	</target>
-
-	<!-- - - - - - - - - - - - - - - - - - 
-	      target: clean.after                      
-	     - - - - - - - - - - - - - - - - - -->
-	<target name="clean.after" if="cleanAfter">
-		<antcall target="clean" />
+		<delete dir="${buildDirectory}" failonerror="false" />
 	</target>
 
 	<!-- - - - - - - - - - - - - - - - - - 
           target: generate.base                      
          - - - - - - - - - - - - - - - - - -->
 	<target name="generate.base" depends="copy.base.windows,copy.base">
-		<!-- Wipe the non-test plugins-->
-		<antcall target="wipe.plugins" />
-		<!-- Copy test plugins into plugins dir -->
+		<!-- Copy test fragments into plugins dir -->
+		<echo message="Copying test fragments" level="info" />
+		<mkdir dir="${buildDirectory}/plugins" />
 		<copy todir="${buildDirectory}/plugins">
-			<fileset dir="${buildDirectory}/tests">
+			<fileset dir="${workspace}/tests">
 				<include name="**/*" />
 			</fileset>
 		</copy>
-		<antcall target="run.director">
-			<param name="p2.installIU" value="com.windowtester.runtime.feature.group" />
-			<param name="p2.repo" value="${windowtester.p2.repo}" />
-		</antcall>
-		<antcall target="run.director">
-			<param name="p2.installIU" value="com.aptana.feature.feature.group" />
-			<param name="p2.repo" value="file:${studio3.p2.repo}" />
-		</antcall>
-		<antcall target="run.director">
-			<param name="p2.installIU" value="com.aptana.studio.tests.feature.group" />
-			<param name="p2.repo" value="file:${studio3.test.p2.repo}" />
-		</antcall>
-		<antcall target="run.director">
-			<param name="p2.installIU" value="com.aptana.php.feature.feature.group" />
-			<param name="p2.repo" value="file:${php.p2.repo}" />
-		</antcall>
-	</target>
-
-	<!-- - - - - - - - - - - - - - - - - - 
-          target: wipe.plugins                      
-         - - - - - - - - - - - - - - - - - -->
-	<target name="wipe.plugins" unless="dont.wipe.plugins">
-		<delete verbose="true">
-			<fileset dir="${buildDirectory}/plugins">
-				<include name="**/*" />
+		<!-- copy features -->
+		<echo message="Copying features" level="info" />
+		<copy todir="${buildDirectory}">
+			<fileset dir="${workspace}" defaultexcludes="true">
+				<include name="features/**" />
 			</fileset>
-		</delete>
+		</copy>
 	</target>
 
 	<!-- - - - - - - - - - - - - - - - - - 
-          target: copy.base                      
+          target: copy.base
+          On non-Windows machines, copy eclipse and plugins/features directories to buildDirectory to set up for build
          - - - - - - - - - - - - - - - - - -->
 	<target name="copy.base" unless="is.windows">
+		<mkdir dir="${buildDirectory}" />
 		<!-- Copy over the original base eclipse to a new location.
-						Have to use exec cp to retain permissions on *nix, Mac -->
+								Have to use exec cp to retain permissions on *nix, Mac -->
+		<echo message="Copying eclipse" level="info" />
 		<exec executable="cp">
 			<arg line="-R ${vanilla.eclipse} ${baseLocation}" />
 		</exec>
@@ -150,6 +109,8 @@
           target: copy.base.windows                      
          - - - - - - - - - - - - - - - - - -->
 	<target name="copy.base.windows" if="is.windows">
+		<mkdir dir="${buildDirectory}" />
+		<!-- copy eclipse -->
 		<copy todir="${baseLocation}">
 			<fileset dir="${vanilla.eclipse}" includes="**/*" defaultexcludes="false" />
 		</copy>
@@ -163,59 +124,47 @@
 			<arg line="-application org.eclipse.equinox.p2.director" />
 			<arg line="-nosplash" />
 			<arg line="-consoleLog" />
-			<arg line="-metadataRepository ${p2.repo}" />
-			<arg line="-artifactRepository ${p2.repo}" />
+			<arg line="-repository ${p2.repo}" />
 			<arg line="-installIU ${p2.installIU}" />
 		</java>
 	</target>
 
-	<target name="test" depends="build">
-		<!-- Install the test feature we just built -->
+	<target name="-pre-test" description="Install test features and do pre-test setup.">
+		<!-- Unzip Eclipse Testing Framework and... -->
+		<unzip src="eclipse-test-framework-3.6.zip" dest="${baseLocation}/dropins" />
+		<!-- Install the test feature we just built along with eclipse test framework -->
 		<antcall target="run.director">
-			<param name="p2.installIU" value="${topLevelElementId}.feature.group" />
-			<param name="p2.repo" value="file:${p2.repo.dir}" />
+			<param name="p2.installIU" value="com.aptana.feature.feature.group,com.windowtester.runtime.feature.group,com.aptana.php.feature.feature.group,com.aptana.studio.tests.feature.group,${topLevelElementId}.feature.group" />
+			<param name="p2.repo" value="${studio3.p2.repo},${windowtester.p2.repo},${php.p2.repo},${studio3.test.p2.repo},file:${deploy.dir}" />
 		</antcall>
-		<!-- Add Eclipse Testing Framework -->
-		<unzip src="eclipse-test-framework-3.6.zip" dest="${baseLocation}/test-framework" />
-		<antcall target="run.director">
-			<param name="p2.installIU" value="org.eclipse.test.feature.group" />
-			<param name="p2.repo" value="file:${baseLocation}/test-framework/eclipse" />
-		</antcall>
-
 		<!-- Modify the plugin_custimization.ini to set initial properties for tests! -->
 		<concat append="true" destfile="${baseLocation}/plugins/org.eclipse.sdk_3.6.0.v201006080911/plugin_customization.ini">
 			<filelist dir="${basedir}/prefs" files="plugin_customization.ini" />
 		</concat>
+	</target>
 
-		<!-- Instrument the code using EMMA -->
-		<emma enabled="true">
-			<instr instrpathref="instrument.classpath" mode="overwrite" metadatafile="${coverageDirectory}/metadata.emma">
-				<filter file="emma-filters.txt" />
-			</instr>
-		</emma>
-
-		<property name="library-file" value="${baseLocation}/test-framework/eclipse/plugins/org.eclipse.test_3.3.0/library.xml" />
-		<!-- Run the tests. -->
-		<antcall target="run-core-test">
-			<param name="test.plugin" value="com.aptana.php.tests.all" />
-			<param name="test.classname" value="com.aptana.php.tests.all.CoreTests" />
-		</antcall>
-		<antcall target="run-ui-test">
-     		<param name="test.plugin" value="com.aptana.php.tests.all" />
-      		<param name="test.classname" value="com.aptana.php.tests.all.UITests" />
-    	</antcall>
-
-		<!-- Collect all test results into single file and move to results directory. -->
+	<target name="-post-test" description="Collect all test results into single file and move to results directory.">
 		<ant target="collect" antfile="${library-file}" dir="${baseLocation}">
 			<property name="includes" value="com*.xml" />
 			<property name="output-file" value="test-results.xml" />
 		</ant>
+		<mkdir dir="${testResultsDirectory}"/>
 		<move file="${baseLocation}/test-results.xml" todir="${testResultsDirectory}" />
+	</target>
 
-		<!-- Produce coverage analysis docs using EMMA -->
+	<target name="-instrument" description="Instrument the code using EMMA. Call before running tests. Call '-coverage' to produce reports after.">
+		<emma enabled="true">
+			<instr instrpathref="instrument.classpath" mode="overwrite" metadatafile="${buildDirectory}/metadata.emma">
+				<filter file="emma-filters.txt" />
+			</instr>
+		</emma>
+	</target>
+
+	<target name="-coverage" description="Produce coverage analysis docs using EMMA. Assumes '-instrument' was called before running the tests.">
+		<mkdir dir="${coverageDirectory}"/>
 		<emma enabled="true">
 			<report>
-				<fileset dir="${coverageDirectory}">
+				<fileset dir="${buildDirectory}">
 					<include name="*.emma" />
 				</fileset>
 
@@ -224,7 +173,50 @@
 				<xml outfile="${coverageDirectory}/coverage.xml" depth="method" />
 			</report>
 		</emma>
-		<antcall target="clean.after" />
+	</target>
+
+	<target name="test" depends="build">
+		<antcall target="-pre-test" />
+		<antcall target="-instrument" />
+
+		<!-- Run the tests. -->
+		<antcall target="run-core-test">
+			<param name="test.plugin" value="com.aptana.php.tests.all" />
+			<param name="test.classname" value="com.aptana.php.tests.all.CoreTests" />
+		</antcall>
+		<antcall target="run-ui-test">
+			<param name="test.plugin" value="com.aptana.php.tests.all" />
+			<param name="test.classname" value="com.aptana.php.tests.all.UITests" />
+		</antcall>
+
+		<antcall target="-post-test" />
+		<antcall target="-coverage" />
+	</target>
+
+	<target name="performance" depends="generate.build.properties,copy.base.windows,copy.base">
+		<antcall target="-pre-test" />
+
+		<!-- Don't build, assume unit test built already ran and we can just re-use it! -->
+		<!-- Grab the version number of build we're testing -->
+		<pathconvert property="studio.version">
+			<dirset dir="${baseLocation}/features">
+				<include name="com.aptana.php.feature_*" />
+			</dirset>
+			<chainedmapper>
+				<flattenmapper />
+				<regexpmapper from="^com\.aptana\.php\.feature_([\d\.]+)\-.*$$" to="\1" />
+			</chainedmapper>
+		</pathconvert>
+
+		<echo message="Running performance tests on Studio ${studio.version}, on host: ${computer.hostname}, java version: ${java.version}" />
+
+		<!-- Run the tests. -->
+		<antcall target="run-perf-test">
+			<param name="test.plugin" value="com.aptana.radrails.tests.all" />
+			<param name="test.classname" value="com.aptana.radrails.tests.all.PerformanceTests" />
+		</antcall>
+
+		<antcall target="-post-test" />
 	</target>
 
 	<target name="run-ui-test">
@@ -239,7 +231,7 @@
 			<property name="data-dir" value="${baseLocation}/junit-workspace -clean" />
 			<property name="plugin-name" value="${test.plugin}" />
 			<property name="classname" value="${test.classname}" />
-			<property name="extraVMargs" value="-Demma.coverage.out.file=${coverageDirectory}/coverage.emma -Dosgi.dev=${basedir}/lib/emma.jar" />
+			<property name="extraVMargs" value="-Demma.coverage.out.file=${buildDirectory}/coverage.emma -Dosgi.dev=${basedir}/lib/emma.jar" />
 		</ant>
 	</target>
 
@@ -256,6 +248,21 @@
 			<property name="plugin-name" value="${test.plugin}" />
 			<property name="classname" value="${test.classname}" />
 			<property name="extraVMargs" value="-Demma.coverage.out.file=${coverageDirectory}/coverage.emma -Dosgi.dev=${basedir}/lib/emma.jar" />
+		</ant>
+	</target>
+
+	<target name="run-perf-test">
+		<ant target="ui-test" antfile="${library-file}" dir="${baseLocation}">
+			<property name="timeout" value="${test.timeout}" />
+			<property name="test.target" value="performance" />
+			<property name="os" value="${baseos}" />
+			<property name="ws" value="${basews}" />
+			<property name="arch" value="${basearch}" />
+			<property name="eclipse-home" value="${baseLocation}" />
+			<property name="data-dir" value="${baseLocation}/junit-workspace -clean" />
+			<property name="plugin-name" value="${test.plugin}" />
+			<property name="classname" value="${test.classname}" />
+			<property name="extraVMargs" value="-XX:MaxPermSize=384m -Djunit.properties=${basedir}/build.properties -Declipse.perf.dbloc=${perf.db} -Declipse.perf.config=build=${studio.version};host=${computer.hostname};jvm=${java.version} -Dsetup.override.eclipseArgs=vm=/usr/bin/java ${extraPerfArgs}" />
 		</ant>
 	</target>
 </project>
